# pricing_scraper

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  main.py  pyproject.toml
scraper/: supplier_manager.py
scraper/core/: scraper.py
scraper/exporters/: google_sheets_exporter.py
scraper/interfaces/: authenticator.py  exporter.py  page_fetcher.py  parser.py
scraper/models/: product.py
scraper/suppliers/dummy/: authenticator.py  page_fetcher.py  parser.py  scrape.py
scraper/suppliers/steel_and_tube/: authenticator.py  page_fetcher.py  parser.py  scrape.py
scraper/suppliers/wakefield_metals/: authenticator.py  page_fetcher.py  parser.py
tests/: test_scraper.py
